--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           git config --local user.email "ivalin.chobanov@gmail.com"
           git config --local user.name "Ivalin Chobanov"
           git add public/robots.txt public/sitemap.xml
-          git commit -m "Update sitemap and robots.txt" || echo "No changes to commit"
+          git commit -m "Updated sitemap and robots.txt" || echo "No changes to commit"
           git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
