--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,10 @@ jobs:
         run: npm run build
         env:
           PAGES_BASE_PATH: ${{ steps.setup-pages.outputs.base_path }}
+      - name: Copy robots.txt and sitemap.xml
+        run: |
+          cp public/robots.txt out/robots.txt
+          cp public/sitemap.xml out/sitemap.xml
       - name: Upload artifacts
         uses: actions/upload-pages-artifact@v3
         with:
